--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link href=’https://fonts.googleapis.com/css?family=Font+Name’ rel=’stylesheet’>
     <link rel="stylesheet" href="normalise.css">
-    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <section class="hero_image">
